--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no">
         <link rel="stylesheet" href="">
     </head>
     <body>
-
-        <canvas id="canv" style="background-color:rgb(0, 0, 0)"></canvas>
-        <!-- <canvas id="canv" style="background-color:rgba(255, 136, 0, 0.74)"></canvas> -->
-
-        <div>
-            <h1 class="center logo">AM</h1>
+         <div class="container-fluid">
+            <div class="row ">
+                <div  clas="col-12">
+                    <h1 class="center logo">AM</h1>
+                    <canvas id="canv" style="background-color:rgb(0, 0, 0)"></canvas>
+                </div>
+            </div>
         </div>
-
     </body>
- 
 </html>
