--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,18 +2,34 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>AM</title>
         <meta name="description" content="">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no">
         <link rel="stylesheet" href="">
     </head>
     <body>
          <div class="container-fluid">
-            <div class="row ">
-                <div  clas="col-12">
-                    <h1 class="center logo">AM</h1>
-                    <canvas id="canv" style="background-color:rgb(0, 0, 0)"></canvas>
+            <div class = "row above">
+                <div class = "col">
+                    <nav class="navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                            <a class="nav-link cp" href="https://github.com/agmoss">GH</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link cp" href="https://www.linkedin.com/in/agmoss/">LN</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link cp" href="https://calgaryproject.net/">CP</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
+            </div>
+
+            <div class="row ">
+                <h1 class="center logo">AM</h1>
+                <canvas id="canv" style="background-color:rgb(0, 0, 0)"></canvas>
             </div>
         </div>
     </body>
