--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,10 +2,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AM</title>
+        <title>&#65279;</title>
         <meta name="description" content="">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no">
-        <link rel="stylesheet" href="">
+        <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/198/kiss-mark_1f48b.png">
     </head>
     <body>
          <div class="container-fluid">
